@@ -1,11 +1,12 @@
 /**
- * Copyright 2017-2019 Jive Software
+ *
+ * Copyright 2017-2022 Jive Software
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -24,6 +25,7 @@ import org.jivesoftware.smack.xml.XmlPullParser;
 import org.jivesoftware.smack.xml.XmlPullParserException;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 
 import timber.log.Timber;
 
@@ -48,18 +50,18 @@ public class DefaultXmlElementProvider<EE extends AbstractXmlElement> extends Ex
      * Creates a new stanza provider for the specified stanza extensions.
      *
      * @param c the {@link Class} that the stanza we will be parsing belong to.
-     * @param builder stanzas builder
+     * @param nameSpace stanzas builder with the modified nameSpace
      */
-    public DefaultXmlElementProvider(Class<EE> c)
-    {
-        stanzaClass = c;
-        nameSpace = null;
-    }
-
     public DefaultXmlElementProvider(Class<EE> c, String nameSpace)
     {
         stanzaClass = c;
         this.nameSpace = nameSpace;
+    }
+
+    public DefaultXmlElementProvider(Class<EE> c)
+    {
+        stanzaClass = c;
+        nameSpace = null;
     }
 
     /**
@@ -77,12 +79,12 @@ public class DefaultXmlElementProvider<EE extends AbstractXmlElement> extends Ex
     {
         EE stanzaExtension;
         try {
-            stanzaExtension = stanzaClass.newInstance();
-        } catch (IllegalAccessException | InstantiationException ignore) {
+            stanzaExtension = stanzaClass.getDeclaredConstructor().newInstance();
+        } catch (IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException ignore) {
             Timber.w("Unknown stanza class: %s", parser.getName());
             return null;
         }
-        EE.Builder<?, ?> mBuilder = stanzaExtension.getBuilder(nameSpace);
+        AbstractXmlElement.Builder<?, ?> mBuilder = stanzaExtension.getBuilder(nameSpace);
 
         // first, set all the attributes
         int attrCount = parser.getAttributeCount();
